# googleapis-_-google-cloud-cpp-bigquery

./: .bazelrc  .cmake-format.py  .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  README.md  WORKSPACE.bazel  libraries.bzl  vcpkg.json
.github/: CODEOWNERS  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: macos-bazel.yml  macos-cmake.yml  test-runner.yml  windows-bazel.yml  windows-cmake.yml
bazel/: BUILD.bazel  arrow.BUILD  configure_template.bzl.patch  crc32c.BUILD  deps-cache.py  development0.bzl  development1.bzl  development2.bzl  google_cloud_cpp_deps.bzl  googleapis.BUILD  libpfm.BUILD  library_names.bzl  pugixml.BUILD  workspace0.bzl  workspace1.bzl  workspace2.bzl  workspace3.bzl  workspace4.bzl  workspace5.bzl
ci/: check-include-guards.gawk  install-cloud-sdk.sh  retry-command.sh
ci/cloudbuild/: build.sh  cloudbuild.yaml  trigger.sh
ci/cloudbuild/builds/: asan.sh  check-api.sh  checkers.sh  clang-tidy.sh  cmake-install.sh  coverage.sh  demo-install.sh  integration-production.sh  quickstart-bazel.sh
ci/cloudbuild/builds/lib/: bazel.sh  cmake.sh  ctest.sh  features.sh  git.sh  integration.sh  quickstart.sh  vcpkg.sh
ci/cloudbuild/dockerfiles/: checkers.Dockerfile  debian-github.Dockerfile  demo-alpine-stable.Dockerfile  demo-debian-bookworm.Dockerfile  demo-debian-bullseye.Dockerfile  demo-fedora.Dockerfile  demo-opensuse-leap.Dockerfile  demo-rockylinux-9.Dockerfile  demo-ubuntu-24.04.Dockerfile  demo-ubuntu-focal.Dockerfile  demo-ubuntu-jammy.Dockerfile  fedora-latest-bazel-asan.Dockerfile  fedora-latest-bazel.Dockerfile  fedora-latest-cmake-gcc.Dockerfile  fedora-latest-cmake.Dockerfile  fedora-latest-cxx14.Dockerfile  fedora-latest-cxx20.Dockerfile  fedora-latest-publish-docs.Dockerfile  fedora-m32.Dockerfile  fedora-msan.Dockerfile  gcc-oldest.Dockerfile  ubuntu-20.04-install.Dockerfile  ubuntu-24.04.Dockerfile  ubuntu-focal.Dockerfile
ci/cloudbuild/triggers/: asan-ci.yaml  asan-pr.yaml  check-api-ci.yaml  check-api-pr.yaml  checkers-ci.yaml  checkers-pr.yaml  clang-tidy-ci.yaml  clang-tidy-pr.yaml  cmake-install-ci.yaml  cmake-install-pr.yaml  coverage-ci.yaml  coverage-pr.yaml  demo-alpine-stable-ci.yaml  demo-alpine-stable-pr.yaml  demo-debian-bookworm-ci.yaml  demo-debian-bookworm-pr.yaml  demo-debian-bullseye-ci.yaml  demo-debian-bullseye-pr.yaml  demo-fedora-ci.yaml  demo-fedora-pr.yaml  demo-opensuse-leap-ci.yaml  demo-opensuse-leap-pr.yaml  demo-rockylinux-9-ci.yaml  demo-rockylinux-9-pr.yaml  demo-ubuntu-24-04-ci.yaml  demo-ubuntu-24-04-pr.yaml  demo-ubuntu-focal-ci.yaml  demo-ubuntu-focal-pr.yaml  demo-ubuntu-jammy-ci.yaml  demo-ubuntu-jammy-pr.yaml  integration-production-ci.yaml  integration-production-pr.yaml  quickstart-bazel-ci.yaml  quickstart-bazel-pr.yaml
ci/etc/: cloudcxxrc  expected_install_directories  integration-tests-config.sh  quickstart-config.sh
ci/generate-markdown/: dockerfile2markdown.sh  generate-packaging.sh  generate-readme.sh  update-library-landing-dox.sh  update-library-readme.sh
ci/gha/builds/: external-account.sh  macos-bazel.sh  macos-cmake.sh  windows-bazel.sh  windows-cmake.sh
ci/gha/builds/cmake/: windows-sccache.cmake
ci/gha/builds/lib/: bazel.sh  cmake.sh  ctest.sh  linux.sh  macos.sh  windows.sh
ci/lib/: init.sh  io.sh  module
ci/verify_current_targets/: BUILD.bazel  CMakeLists.txt  WORKSPACE.bazel  verify_current_targets.cc
ci/verify_quickstart/: CMakeLists.txt
cmake/: AddPkgConfig.cmake  CreateBazelConfig.cmake  FindGMockWithTargets.cmake  GoogleCloudCppCommon.cmake  GoogleCloudCppCommonOptions.cmake  GoogleCloudCppFeatures.cmake  print-ga-libraries.cmake
cmake/templates/: config.cmake.in  config.pc.in
doc/: bazel-apache-arrow.md  packaging.md
google/cloud/bigquery_unified/: BUILD.bazel  CMakeLists.txt  README.md  bigquery_unified_client_unit_tests.bzl  client.cc  client.h  client_test.cc  connection.cc  connection.h  connection_test.cc  google_cloud_cpp_bigquery_bigquery_unified.bzl  google_cloud_cpp_bigquery_bigquery_unified_mocks.bzl  google_cloud_cpp_bigquery_common.bzl  idempotency_policy.cc  idempotency_policy.h  job_options.h  read_arrow_response.h  read_options.h  retry_policy.h  version.cc  version.h
google/cloud/bigquery_unified/integration_tests/: BUILD.bazel  CMakeLists.txt  job_integration_test.cc  read_integration_test.cc
google/cloud/bigquery_unified/internal/: arrow_reader.cc  arrow_reader.h  async_rest_long_running_operation_custom.h  connection_impl.cc  connection_impl.h  connection_impl_test.cc  default_options.cc  default_options.h  default_options_test.cc  retry_traits.h  tracing_connection.cc  tracing_connection.h  tracing_connection_test.cc  version_info.h  version_info.h.in
google/cloud/bigquery_unified/mocks/: mock_connection.h  mock_stream_range.h  mock_stream_range_test.cc
google/cloud/bigquery_unified/quickstart/: BUILD.bazel  CMakeLists.txt  Makefile  quickstart.cc
google/cloud/bigquery_unified/samples/: BUILD.bazel  CMakeLists.txt  bigquery_unified_integration_samples.bzl  job_samples.cc  read_samples.cc
google/cloud/bigquery_unified/testing_util/: BUILD.bazel  CMakeLists.txt  google_cloud_cpp_bigquery_bigquery_unified_testing.bzl  opentelemetry_matchers.cc  opentelemetry_matchers.h  status_matchers.cc  status_matchers.h
release/: README.md  changes.sh  release.sh
